--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
-node_env=development
+NODE_ENV=development
 db_userName=postgres
 db_password=134431125
-db_name=e_commerce
+db_name=rapp
 db_host=localhost
 db_port=5434
+port=3000
+dialect=postgres
+salt=6
+token_key=rrr
